# cpp-bs-2024-03-19

./: CMakeLists.txt  README.md
_exercises/ex_palindromes/: palindromes.cpp
_exercises/ex_primes/: primes.cpp
_exercises/ex_vector2d/: test_vector.cpp
basic-types/: basic_types.cpp
containers-and-iterators/: containers.cpp
enums/: enums.cpp
functions/: functions.cpp  square.cpp  square.hpp
memory-management/: memory_management.cpp
move-semantics/: CMakeLists.txt  move_semantics_1.cpp  move_semantics_2.cpp  move_semantics_3.cpp  move_semantics_motivation.cpp  perfect_forwarding.cpp
oop/: bank_account.hpp  oop.cpp
optional-variant/: optional_variant.cpp
polymorphism/: point.hpp  polymorphism.cpp  shape.cpp  shape.hpp
type-deduction/: type_deduction.cpp
vector/: vector_tests.cpp
